<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- App Bar dengan Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Card Ringkasan -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                style="@style/Widget.KalunaFinance.CardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        style="@style/TextAppearance.KalunaFinance.Subtitle1"/>

                    <TextView
                        android:id="@+id/text_total_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/currency_format"
                        style="@style/TextAppearance.KalunaFinance.Headline6"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:orientation="horizontal">

                        <!-- Pemasukan -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/income"
                                style="@style/TextAppearance.KalunaFinance.Body1"/>

                            <TextView
                                android:id="@+id/text_income"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Rp 0"
                                style="@style/TextAppearance.KalunaFinance.Amount.Income"
                                android:textSize="16sp"/>
                        </LinearLayout>

                        <!-- Pengeluaran -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/expense"
                                style="@style/TextAppearance.KalunaFinance.Body1"/>

                            <TextView
                                android:id="@+id/text_expense"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Rp 0"
                                style="@style/TextAppearance.KalunaFinance.Amount.Expense"
                                android:textSize="16sp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Transactions List -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:text="@string/title_transactions"
                style="@style/TextAppearance.KalunaFinance.Subtitle1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/spacing_large"/>

            <!-- Empty State -->
            <TextView
                android:id="@+id/text_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/no_transactions"
                android:visibility="gone"
                style="@style/TextAppearance.KalunaFinance.Body1"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_medium"
        android:text="@string/title_add_transaction"
        app:icon="@android:drawable/ic_input_add"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>